--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Header from "../components/Header.astro";
+import Cube from "../components/Cube.astro";
+
 interface Props {
 	title: string;
 }
@@ -17,7 +20,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<Header />
+		<main>
+			<Cube />
+			<slot />
+		</main>
 	</body>
 </html>
 <style is:global>
